Fixed loader
Fixed loader text not aligning when on mobile

--- a/projects/landing-page-debut/page.css
+++ b/projects/landing-page-debut/page.css
@@ -208,6 +208,8 @@ body {
     letter-spacing: 9px;
     color: var(--text);
 
+    text-align: center;
+
 }
 
 .loadingText > .locating {
@@ -893,6 +895,36 @@ main {
 
 }
 
+@media (max-width: 1366px) and (max-height: 683px) {
+
+    .contentHeader > h1 {
+
+        font-size: 2rem;
+
+    }
+
+    .contentText > p {
+
+        font-size: 1.5rem;
+
+    }
+
+    .contentButton {
+
+        width: 20%;
+        height: 40px;
+        font-size: 1.4rem;
+
+    }
+
+    .background-planet > #planet {
+
+        background-size: 37vw;
+
+    }
+
+}
+
 @media (max-width: 1250px) {
 
     .contentHeader > h1 {
@@ -910,9 +942,9 @@ main {
     .contentButton {
 
         width: 22%;
-        height: 10%;
+        height: 35px;
 
-        font-size: 1.7rem;
+        font-size: 1.5rem;
 
     }
 
